--- a/package.json
+++ b/package.json
@@ -43,15 +43,14 @@
     "chalk": "^5.3.0",
     "commander": "^12.1.0",
     "husky": "^9.1.7",
-    "nodemon": "^3.1.10",
     "nx": "^20.0.0",
     "sass": "^1.97.1",
     "sharp": "^0.34.5",
+    "tapable": "^2.3.0",
     "typescript": "^5.4.5",
     "vite": "^5.1.4",
     "vue-tsc": "^2.0.6"
   },
-
   "engines": {
     "node": ">= 16.0.0 <= 22.0.0",
     "pnpm": "^9.x"
