--- a/todo.ini
+++ b/todo.ini
@@ -1,6 +1,6 @@
 [bug]
-#(待测试) 通过系统环境变量走梯子
-#一次下载过多的图片导致软件崩溃（通过download_image的重构来解决）
+# 通过系统环境变量走梯子
+# 一次下载过多的图片导致软件崩溃（通过download_image的重构来解决）
 # 桌面壁纸窗口偶尔会出现在icon上方，检查主窗口在关闭和最小化时的逻辑
 # 指定输出画册没有生效，后端相关逻辑没有跑
 # 画廊中会存在卡死的下载，找到原因
@@ -18,13 +18,14 @@
 # 设置并发量后，一打开任务抽屉就恢复为默认值
 # 画册页面重命名重复名称报错为 undefined
 # 前端任务图片列表错误
+# 应用启动带检测daemon是否运行，如果未运行则启动daemon
 [issue]
 # 设置页面的UI不好看，应该靠中间，而非靠两边挤
 # 去重不应该阻塞到下载结束
 # Windows 的图片软件在打开图片时提示不信任
 
 [optimize]
-# 主页画廊虚拟滚动 (已撑住百万数据量，以及万张图的流畅滚动)
+# 主页画廊虚拟滚动 (已撑住百万数据量，以及万张图的流畅滚动) （记：2.0.0 之后采用1000张分页架构）
 # 切换模式的时候，应该尽量保留transition和style设置，当模式不同时，应该尽量保留设置，并保存某个模式上一次的设置值，来在无法保留相同模式的时候使用上一次的设置值
 # 将图片主码设置为数字id
 # 在多选情况下可以双击打开预览图，所以单击在多选情况下有一个小时延，判断是否是双击
@@ -32,15 +33,16 @@
 # 导入文件夹或压缩文件的时候勾选为每个文件夹或压缩文件创建一个画册
 # 将导入文件夹和导入文件合并为一个导入插件
 # 将生成的index.json中代入包版本（v1,v2），这样后端就不用兼容解析
+将daemon的输出去掉
 
 [feat]
 # 新增download_archive支持压缩文件
 # 支持用户拖入压缩文件，并在前端显示压缩文件将解压缩并自动加入图片
-添加画册的排序（按照时间前后、按照名称排序、随机排序。排序不可逆，是一个入库的操作）
+# （使用provider架构，后面添加更多丰富的排序）添加画册的排序（按照时间前后、按照名称排序、随机排序。排序不可逆，是一个入库的操作）
 # 添加快捷键窗口
 # 在源页面的导入弹窗中拖入kgpg文件进行导入
 # （放弃，因为功能太冗余）添加截图功能
-? 输出画册做成多选
+# ? （改动较大） 输出画册做成多选
 rotator添加栈，使得可以回退到上一个壁纸
 # 为windows注册kgpg文件关联
 # 添加命令行调用（运行爬虫，传入参数）（供 sharex 等截图工具调用）
@@ -51,14 +53,24 @@ rotator添加栈，使得可以回退到上一个壁纸
 支持多设备共享数据（无服务器，通过手动操作主动进行）
 # 插件编辑器，用vscode编辑器引擎
 每日爬图统计功能（具体如何做？来个产品设计一下）
-! 支持 Macos
-! 支持 Linux
+# ! （降权）支持 Macos
+支持 Linux（支持不同桌面，现已支持plasma）
 !! 支持 Android
-!! 支持 iOS（提供有限的壁纸功能）
-!!! 支持微信小程序（放弃壁纸功能，仅提供图片浏览服务）
-!!!!! 支持HarmonyOS（如果实现了，便是全社区第一）
+# !!（放弃） 支持 iOS（提供有限的壁纸功能）
+# !!!（ROI低） 支持微信小程序（放弃壁纸功能，仅提供图片浏览服务）
+# !!!!!（看 feature request）支持HarmonyOS（如果实现了，便是全社区第一）
+!! 集成图形训练pytorch，用来智能分类壁纸
+! 局域网数据共享（复用爬虫插件，通过http访问peer，并提供可扩展的发现协议）
+! Provider 插件系统（允许插件作者使用 rhai 编写自定义 Provider，支持自定义数据视图）（内置的provider滞留root_provider（加载所有plugin_provider）以及all_provider（运行上层provider提供的sql来提供分页视图））（provider可以不用all_provider直接返回图片）
+! Provider 支持远程 URL（Provider 可以返回远程图片 URL，支持预览模式和按需下载）
 
 [refactor]
 # 将 download_image 写成同步调用，将队列直接去掉，只剩下一个正在运行的窗口
 迁移到 sea-orm
 # 重构kgpg格式，使得能够不拉取全量数据就能够获取其中的部分信息比如图标、文档等。
+# 迁移到daemon架构，将主程序只做界面展示和交互，将核心逻辑放到daemon中
+重写前端 loadImageUrl，兼容图片url和本地路径，并统一返回blob（没有asset，前端用lru缓存防止爆内存）
+重写 download_image 逻辑，将不同的协议用不同的下载器来处理。（蓝牙、http、file等），并统一处理去重逻辑（先url，后哈希），对file协议唯一添加不能处于源目录之下的特殊处理
+将前端的 blob 统一放在一个store中处理，前端监听有效性，一旦无效则重新申请url。（可选：用户可以配置缓存大小）（永远不能revoke用户正在看的预览图的blob）
+provider不分远程图片和本地图片，只有前端的url加载器、后端磁盘的read_file根据schema采取不同处理。
+前端的一切和数据存储有关的数据变化都由数据驱动处理，并在刷新或者发生不一致的时候才重新请求数据。
