--- a/.github/workflows/release-windows.yml
+++ b/.github/workflows/release-windows.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main # 当推送到 main 分支时触发
     tags:
-      - "v*" # 当推送以 v 开头的 tag 时触发
+      - "v*-release*" # 当推送以 v 开头以 release 结尾的 tag 时触发
   workflow_dispatch:
     inputs:
       prerelease:
