--- a/src-tauri/core/Cargo.toml
+++ b/src-tauri/core/Cargo.toml
@@ -30,6 +30,9 @@ lru = "0.12"
 sled = "0.34"
 memmap2 = { version = "0.9", optional = true }
 
+[target.'cfg(target_os = "linux")'.dependencies]
+which = { version = "6.0", optional = true}
+
 [target.'cfg(windows)'.dependencies]
 windows-sys = { version = "0.52", features = [
   "Win32_Foundation",
