--- a/todo.ini
+++ b/todo.ini
@@ -74,3 +74,7 @@ rotator添加栈，使得可以回退到上一个壁纸
 将前端的 blob 统一放在一个store中处理，前端监听有效性，一旦无效则重新申请url。（可选：用户可以配置缓存大小）（永远不能revoke用户正在看的预览图的blob）
 provider不分远程图片和本地图片，只有前端的url加载器、后端磁盘的read_file根据schema采取不同处理。
 前端的一切和数据存储有关的数据变化都由数据驱动处理，并在刷新或者发生不一致的时候才重新请求数据。
+
+[stash]
+get_current_wallpaper_path_from_settings 同步转异步
+active_manager 同步转异步
