--- a/src-tauri/app-plugin-editor/Cargo.toml
+++ b/src-tauri/app-plugin-editor/Cargo.toml
@@ -1,33 +1,29 @@
 [package]
+edition = {workspace = true}
 name = "kabegame-plugin-editor"
-version = { workspace = true }
-edition = { workspace = true }
+version = {workspace = true}
 
 [dependencies]
-kabegame-core = { workspace = true, default-features = false, features = ["ipc-client"] }
-tauri = { workspace = true, features = ["protocol-asset"] }
+base64 = {workspace = true}
+image = {workspace = true}
+kabegame-core = {workspace = true, default-features = false}
+rhai = {workspace = true}
+serde = {workspace = true}
+serde_json = {workspace = true}
+tauri = {workspace = true, features = ["protocol-asset"]}
 tauri-plugin-dialog = "=2.4.2"
-tauri-plugin-shell = "=2.3.3"
 tauri-plugin-fs = "=2.4.4"
-serde_json = { workspace = true }
-serde = { workspace = true }
-image = { workspace = true }
-zip = { workspace = true }
-rhai = { workspace = true }
-base64 = { workspace = true }
-tokio = { workspace = true }
+tauri-plugin-shell = "=2.3.3"
+tokio = {workspace = true}
+zip = {workspace = true}
 
 [build-dependencies]
-tauri-build = { workspace = true }
+tauri-build = {workspace = true}
 
 [features]
-default = ["custom-protocol"]
 custom-protocol = ["tauri/custom-protocol", "kabegame-core/custom-protocol"]
+default = ["custom-protocol"]
 
 [[bin]]
 name = "kabegame-plugin-editor"
 path = "src/main.rs"
-
-
-
-
