--- a/src-tauri/core/Cargo.toml
+++ b/src-tauri/core/Cargo.toml
@@ -1,43 +1,46 @@
 [package]
-name = "kabegame-core"
-version = { workspace = true }
-edition = { workspace = true }
-description = "Kabegame 共享后端核心（crawler/plugin/storage 等）"
 build = "build.rs"
+description = "Kabegame 共享后端核心（crawler/plugin/storage 等）"
+edition = {workspace = true}
+name = "kabegame-core"
+version = {workspace = true}
 
 [dependencies]
-tauri = { workspace = true, optional = true }
+tauri = {workspace = true, optional = true}
 
-serde = { workspace = true }
-serde_json = { workspace = true }
-regex = "1.11"
-tokio = { workspace = true }
-reqwest = { version = "0.11", features = ["blocking", "json", "stream", "native-tls"] }
+arc-swap = "1.7"
+auto-launch = "0.5"
+base64 = {workspace = true}
+dirs = "5.0"
 futures-util = "0.3"
+image = {workspace = true}
+lru = "0.12"
+memmap2 = {version = "0.9", optional = true}
+regex = "1.11"
+reqwest = {version = "0.11", features = ["blocking", "json", "stream", "native-tls"]}
+rhai = {workspace = true}
+rusqlite = {version = "0.31", features = ["bundled"]}
 scraper = "0.19"
 select = "0.6"
-url = { workspace = true }
-uuid = { workspace = true }
-dirs = "5.0"
-image = { workspace = true }
-zip = { workspace = true }
-rhai = { workspace = true }
-auto-launch = "0.5"
-rusqlite = { version = "0.31", features = ["bundled"] }
-sha2 = { workspace = true }
-base64 = { workspace = true }
-serde_cbor = { workspace = true }
-serde_bytes = { workspace = true }
-lru = "0.12"
+serde = {workspace = true}
+serde_bytes = {workspace = true}
+serde_cbor = {workspace = true}
+serde_json = {workspace = true}
+sha2 = {workspace = true}
 sled = "0.34"
-memmap2 = { version = "0.9", optional = true }
-arc-swap = "1.7"
+tokio = {workspace = true}
+url = {workspace = true}
+uuid = {workspace = true}
+zip = {workspace = true}
 
 [target.'cfg(target_os = "linux")'.dependencies]
-which = { version = "6.0", optional = true}
+which = {version = "6.0", optional = true}
 
 [target.'cfg(windows)'.dependencies]
-windows-sys = { version = "0.52", features = [
+dokan = {version = "0.3.1", optional = true}
+widestring = {version = "0.4.3", optional = true}
+winapi = {version = "0.3.9", features = ["ntstatus", "winnt", "winbase"], optional = true}
+windows-sys = {version = "0.52", features = [
   "Win32_Foundation",
   "Win32_Graphics_Dwm",
   "Win32_Graphics_Gdi",
@@ -51,21 +54,12 @@ windows-sys = { version = "0.52", features = [
   "Win32_UI_Shell",
   "Win32_UI_WindowsAndMessaging",
 ]}
-dokan = { version = "0.3.1", optional = true }
-widestring = { version = "0.4.3", optional = true }
-winapi = { version = "0.3.9", features = ["ntstatus", "winnt", "winbase"], optional = true }
-
 
 [features]
 default = []
-# 去重功能（目前依赖 GUI 事件），默认关闭
-dedupe = [] 
+ipc = []
 # （可选）仅当需要在"非 IPC 的前端直连"场景复用 Tauri 的 state/emit 时启用。
-# 将来安卓或者清洁版self-hosted环境需要使用这个feature，并同时不能开启 ipc-* feature
-tauri-runtime = []
-custom-protocol = ["tauri/custom-protocol"]
+# 将来安卓或者清洁版self-hosted环境需要使用这个feature
+custom-protocol = ["dep:tauri", "tauri/custom-protocol"]
+tauri = ["dep:tauri"]
 virtual-driver = ["dep:dokan", "dep:widestring", "dep:winapi", "dep:memmap2"]
-# IPC 客户端功能（用于 app-main、app-cli、app-plugin-editor）
-ipc-client = ["dep:tauri"]
-# IPC 服务端功能（用于 daemon）
-ipc-server = []
