--- a/src-tauri/daemon/Cargo.toml
+++ b/src-tauri/daemon/Cargo.toml
@@ -5,18 +5,18 @@ version = {workspace = true}
 
 [dependencies]
 base64 = {workspace = true}
-kabegame-core = {workspace = true, default-features = false, features = ["dedupe", "ipc-server"]}
+kabegame-core = {workspace = true, default-features = false}
 serde = {workspace = true}
 serde_json = {workspace = true}
 tokio = {workspace = true}
 uuid = {workspace = true}
 
 [target.'cfg(windows)'.dependencies]
-windows-sys = { version = "0.52", features = [
+windows-sys = {version = "0.52", features = [
   "Win32_Foundation",
   "Win32_Security",
   "Win32_Security_Authorization",
-] }
+]}
 
 [build-dependencies]
 tauri-build = {workspace = true}
