--- a/src-tauri/core/Cargo.toml
+++ b/src-tauri/core/Cargo.toml
@@ -62,4 +62,5 @@ ipc = []
 # 将来安卓或者清洁版self-hosted环境需要使用这个feature
 custom-protocol = ["dep:tauri", "tauri/custom-protocol"]
 tauri = ["dep:tauri"]
+tauri-runtime = []
 virtual-driver = ["dep:dokan", "dep:widestring", "dep:winapi", "dep:memmap2"]
