--- a/src-tauri/app-main/Cargo.toml
+++ b/src-tauri/app-main/Cargo.toml
@@ -8,7 +8,7 @@ async-trait = "0.1"
 base64 = {workspace = true}
 governor = {version = "0.7", optional = true}
 image = {workspace = true}
-kabegame-core = {workspace = true, default-features = false, features = ["ipc"]}
+kabegame-core = {workspace = true, default-features = false, features = ["ipc", "tauri-runtime"]}
 lru = {version = "0.12", optional = true}
 memmap2 = {version = "0.9", optional = true}
 serde = {workspace = true}
@@ -39,12 +39,14 @@ tauri-build = {workspace = true}
 
 [features]
 custom-protocol = ["tauri/custom-protocol", "kabegame-core/custom-protocol"]
-default = ["custom-protocol", "tray", "virtual-driver"]
+default = ["custom-protocol", "tray", "virtual-driver", "ipc-service"]
+ipc-service = []
 tray = ["dep:governor"]
-# self-hosted && vd (local) | self-hosted && !vd (light) | !self-hosted && vd (normal)  
-self-hosted = ["kabegame-core/tauri"]
 virtual-driver = ["dep:dokan", "dep:widestring", "dep:winapi", "dep:lru", "dep:memmap2", "kabegame-core/virtual-driver"]
 
 [[bin]]
 name = "kabegame"
 path = "src/main.rs"
+
+[build]
+rustflags = ["-A", "unused"]
