--- a/todo.ini
+++ b/todo.ini
@@ -67,7 +67,7 @@ rotator添加栈，使得可以回退到上一个壁纸
 支持light mode，干净纯洁轻量版本，天然self-hosted，并且不支持虚拟盘和商店插件
 
 [refactor]
-把托盘移到daemon里，用户可以通过托盘退出daemon
+# (daemon去掉) 把托盘移到daemon里，用户可以通过托盘退出daemon
 # 将 download_image 写成同步调用，将队列直接去掉，只剩下一个正在运行的窗口
 迁移到 sea-orm
 # 重构kgpg格式，使得能够不拉取全量数据就能够获取其中的部分信息比如图标、文档等。
