--- a/package.json
+++ b/package.json
@@ -3,19 +3,16 @@
   "description": "让你的桌面充满二次元气息的壁纸管理器！收集、管理、轮播，让老婆们（或老公们）每天陪伴你~ 支持插件扩展，轻松爬取各种二次元壁纸资源~",
   "type": "module",
   "scripts": {
-    "dev": "bun scripts/run.js dev",
-    "start": "bun scripts/run.js start",
-    "build": "bun scripts/run.js build",
+    "dev": "bun scripts/run.ts dev",
+    "start": "bun scripts/run.ts start",
+    "build": "bun scripts/run.ts build",
     "typecheck": "vue-tsc",
     "dev:frontend-main": "bun --cwd apps/main dev",
     "dev:frontend-plugin-editor": "bun --cwd apps/plugin-editor dev",
     "build:frontend-cli": "bun --cwd apps/cli build",
     "build:frontend-main": "bun --cwd apps/main build",
     "build:frontend-plugin-editor": "bun --cwd apps/plugin-editor build",
-    "package-plugin": "nx run src-crawler-plugins:package",
-    "package-plugin:local": "nx run src-crawler-plugins:package-local",
-    "set-version": "bun scripts/set-version.js",
-    "clean-nx-cache": "node scripts/clean-nx-cache.js",
+    "set-version": "bun scripts/set-version.ts",
     "prepare": "husky"
   },
   "dependencies": {
