--- a/src-tauri/core/Cargo.toml
+++ b/src-tauri/core/Cargo.toml
@@ -37,9 +37,9 @@ zip = {workspace = true}
 which = {version = "6.0", optional = true}
 
 [target.'cfg(windows)'.dependencies]
-dokan = {version = "0.3.1", optional = true}
-widestring = {version = "0.4.3", optional = true}
-winapi = {version = "0.3.9", features = ["ntstatus", "winnt", "winbase"], optional = true}
+dokan = "0.3.1"
+widestring = "0.4.3"
+winapi = {version = "0.3.9", features = ["ntstatus", "winnt", "winbase"]}
 windows-sys = {version = "0.52", features = [
   "Win32_Foundation",
   "Win32_Graphics_Dwm",
@@ -61,6 +61,4 @@ ipc = []
 # （可选）仅当需要在"非 IPC 的前端直连"场景复用 Tauri 的 state/emit 时启用。
 # 将来安卓或者清洁版self-hosted环境需要使用这个feature
 custom-protocol = ["dep:tauri", "tauri/custom-protocol"]
-tauri = ["dep:tauri"]
 tauri-runtime = ["dep:tauri"]
-virtual-driver = ["dep:dokan", "dep:widestring", "dep:winapi", "dep:memmap2"]
