--- a/src-tauri/app-plugin-editor/Cargo.toml
+++ b/src-tauri/app-plugin-editor/Cargo.toml
@@ -6,7 +6,7 @@ version = {workspace = true}
 [dependencies]
 base64 = {workspace = true}
 image = {workspace = true}
-kabegame-core = {workspace = true, default-features = false, features = ["ipc"]}
+kabegame-core = {workspace = true, default-features = false, features = ["ipc-client"]}
 rhai = {workspace = true}
 serde = {workspace = true}
 serde_json = {workspace = true}
@@ -21,7 +21,7 @@ zip = {workspace = true}
 tauri-build = {workspace = true}
 
 [features]
-custom-protocol = ["tauri/custom-protocol", "kabegame-core/custom-protocol"]
+custom-protocol = ["tauri/custom-protocol"]
 default = ["custom-protocol"]
 
 [[bin]]
