--- a/src-tauri/core/Cargo.toml
+++ b/src-tauri/core/Cargo.toml
@@ -6,8 +6,6 @@ name = "kabegame-core"
 version = {workspace = true}
 
 [dependencies]
-tauri = {workspace = true, optional = true}
-
 arc-swap = "1.7"
 auto-launch = "0.5"
 base64 = {workspace = true}
@@ -15,7 +13,6 @@ dirs = "5.0"
 futures-util = "0.3"
 image = {workspace = true}
 lru = "0.12"
-memmap2 = {version = "0.9", optional = true}
 regex = "1.11"
 reqwest = {version = "0.11", features = ["blocking", "json", "stream", "native-tls"]}
 rhai = {workspace = true}
@@ -38,6 +35,7 @@ which = {version = "6.0", optional = true}
 
 [target.'cfg(windows)'.dependencies]
 dokan = "0.3.1"
+memmap2 = "0.9"
 widestring = "0.4.3"
 winapi = {version = "0.3.9", features = ["ntstatus", "winnt", "winbase"]}
 windows-sys = {version = "0.52", features = [
@@ -56,9 +54,6 @@ windows-sys = {version = "0.52", features = [
 ]}
 
 [features]
-default = []
-ipc = []
-# （可选）仅当需要在"非 IPC 的前端直连"场景复用 Tauri 的 state/emit 时启用。
-# 将来安卓或者清洁版self-hosted环境需要使用这个feature
-custom-protocol = ["dep:tauri", "tauri/custom-protocol"]
-tauri-runtime = ["dep:tauri"]
+default = ["ipc-client"]
+ipc-client = []
+ipc-server = []
