--- a/src-tauri/app-cli/Cargo.toml
+++ b/src-tauri/app-cli/Cargo.toml
@@ -6,7 +6,7 @@ version = {workspace = true}
 [dependencies]
 base64 = {workspace = true}
 clap = {version = "4.5", features = ["derive"]}
-kabegame-core = {workspace = true, default-features = false, features = ["ipc-client"]}
+kabegame-core = {workspace = true, features = ["ipc-client"]}
 serde = {workspace = true}
 serde_json = {workspace = true}
 tauri = {workspace = true}
