--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "dev": "bun scripts/run.ts dev",
     "start": "bun scripts/run.ts start",
     "b": "bun scripts/run.ts build",
+    "check": "bun scripts/run.ts check",
     "typecheck": "vue-tsc",
     "dev:frontend-main": "bun --cwd apps/main dev",
     "dev:frontend-plugin-editor": "bun --cwd apps/plugin-editor dev",
-    "build:frontend-cli": "bun --cwd apps/cli build",
-    "build:frontend-main": "bun --cwd apps/main build",
-    "build:frontend-plugin-editor": "bun --cwd apps/plugin-editor build",
+    "//": "以下命令为构建前端的命令，通过 bun b 调用不要直接调用因为没有设置相关环境变量",
+    "build-cli": "bun -b --cwd apps/cli build",
+    "build-main": "bun -b --cwd apps/main build",
+    "build-plugin-editor": "bun -b --cwd apps/plugin-editor build",
     "set-version": "bun scripts/set-version.ts",
     "prepare": "husky"
   },
