--- a/.github/workflows/release-windows.yml
+++ b/.github/workflows/release-windows.yml
@@ -1,9 +1,9 @@
-name: Build and Release Windows Installer
+name: Release (copy release folder)
 
 on:
   push:
     tags:
-      - "v*-release" # 当推送以 v 开头以 release 结尾的 tag 时触发
+      - "v*-release"
   workflow_dispatch:
     inputs:
       prerelease:
@@ -13,13 +13,9 @@ on:
         type: boolean
 
 jobs:
-  build-and-release:
-    name: Build Windows Installer (${{ matrix.mode }})
-    strategy:
-      fail-fast: false
-      matrix:
-        mode: [normal, local]
-    runs-on: windows-latest
+  release:
+    name: Create Release from release/
+    runs-on: ubuntu-latest
     permissions:
       contents: write
 
@@ -28,223 +24,16 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          submodules: true # 检出 git 子模块（src-crawler-plugins）
 
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v2
-        with:
-          bun-version: latest
-
-      - name: Cache Bun install cache
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.bun/install/cache
-          key: bun-${{ runner.os }}-${{ hashFiles('bun.lockb') }}
-          restore-keys: |
-            bun-${{ runner.os }}-
-
-      - name: Use Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          toolchain: stable
-
-      - name: Cache Rust dependencies
-        uses: swatinem/rust-cache@v2
-        with:
-          workspaces: "./src-tauri -> target"
-          cache-on-failure: true
-
-      - name: Install dependencies
-        run: bun install --frozen-lockfile
-
-      - name: Package plugins
-        shell: pwsh
-        run: |
-          # 改为直接使用仓库中已提交的 src-crawler-plugins/packed 产物，不在 CI 内重新打包插件
-          $packedDir = "src-crawler-plugins/packed"
-          # 注意：Tauri app-main 的 bundle.resources 配置为 resources/plugins（相对 app-main）
-          $dstDir = "src-tauri/app-main/resources/plugins"
-
-          if (-not (Test-Path $packedDir)) {
-            throw "packed 目录不存在：$packedDir（请先在仓库中提交 src-crawler-plugins/packed）"
-          }
-
-          New-Item -ItemType Directory -Force -Path $dstDir | Out-Null
-          # 清空旧插件，避免残留
-          Get-ChildItem -Path $dstDir -Filter *.kgpg -ErrorAction SilentlyContinue | Remove-Item -Force -ErrorAction SilentlyContinue
-
-          if ("${{ matrix.mode }}" -eq "local") {
-            # local 模式：打包所有插件（内置插件列表=resources/plugins 下的所有 .kgpg）
-            Copy-Item -Path (Join-Path $packedDir "*.kgpg") -Destination $dstDir -Force
-          }
-          else {
-            # normal 模式：仅打包本地插件（local-import）
-            $src = Join-Path $packedDir "local-import.kgpg"
-            if (-not (Test-Path $src)) {
-              throw "normal 模式需要 local-import.kgpg，但未找到：$src"
-            }
-            Copy-Item -Path $src -Destination $dstDir -Force
-          }
-
-      - name: Prepare Dokan runtime (dokan2.dll)
-        shell: pwsh
-        run: |
-          $dstDir = "src-tauri/app-main/resources/bin"
-          $dst = Join-Path $dstDir "dokan2.dll"
-          New-Item -ItemType Directory -Force -Path $dstDir | Out-Null
-
-          if (Test-Path $dst) {
-            Write-Host "dokan2.dll already staged: $dst"
-            exit 0
-          }
-
-          # 0) Prefer repo-bundled Dokan runtime DLL (checked into repo)
-          $repoDll = "bin/dokan2.dll"
-          if (Test-Path $repoDll) {
-            Copy-Item -Path $repoDll -Destination $dst -Force
-            Write-Host "Staged dokan2.dll from repo: $repoDll -> $dst"
-            exit 0
-          }
-
-          function Find-Dokan2Dll() {
-            $candidates = @(
-              (Join-Path $env:WINDIR "System32\\dokan2.dll"),
-              (Join-Path $env:WINDIR "SysWOW64\\dokan2.dll")
-            )
-            foreach ($p in $candidates) {
-              if (Test-Path $p) { return $p }
-            }
-            $pf = $env:ProgramFiles
-            if ($pf) {
-              $root = Join-Path $pf "Dokan"
-              if (Test-Path $root) {
-                $hit = Get-ChildItem -Path $root -Recurse -Filter "dokan2.dll" -ErrorAction SilentlyContinue | Select-Object -First 1
-                if ($hit) { return $hit.FullName }
-              }
-            }
-            return $null
-          }
-
-          $dll = Find-Dokan2Dll
-          if (-not $dll) {
-            throw "dokan2.dll not found on runner. Please commit bin/dokan2.dll (recommended) or preinstall Dokan runtime on runner."
-          }
-
-          Copy-Item -Path $dll -Destination $dst -Force
-          Write-Host "Staged dokan2.dll: $dst (from: $dll)"
-
-      - name: Get version from package.json
+      - name: Get version
         id: version
-        shell: bash
         run: |
-          if [ -f "package.json" ]; then
-            VERSION=$(node -p "require('./package.json').version")
-          elif [ -f "src-tauri/Cargo.toml" ]; then
-            VERSION=$(grep -m1 '^version\s*=' src-tauri/Cargo.toml | sed 's/.*"\(.*\)".*/\1/')
-          else
-            echo "Error: Could not find package.json or Cargo.toml"
-            exit 1
-          fi
+          VERSION=$(node -p "require('./src-tauri/app-main/tauri.conf.json').version" 2>/dev/null)
+          [ -z "$VERSION" ] && VERSION="0.0.0"
           TAG="v${VERSION}"
           echo "version=${VERSION}" >> $GITHUB_OUTPUT
           echo "tag=${TAG}" >> $GITHUB_OUTPUT
           echo "Version: ${VERSION}"
-          echo "Tag: ${TAG}"
-
-      - name: Generate changelog
-        id: changelog
-        shell: bash
-        run: |
-          TAG="${{ steps.version.outputs.tag }}"
-          PREV_TAG=$(git describe --tags --abbrev=0 HEAD~1 2>/dev/null || echo "")
-
-          if [ -z "$PREV_TAG" ]; then
-            CHANGES=$(git log --pretty=format:"- %s (%h)" --no-merges)
-          else
-            CHANGES=$(git log ${PREV_TAG}..HEAD --pretty=format:"- %s (%h)" --no-merges)
-          fi
-
-          {
-            echo "changelog<<EOF"
-            echo "## 📝 アプデ内容"
-            echo ""
-            if [ -z "$CHANGES" ]; then
-              echo "- 无变更记录"
-            else
-              echo "$CHANGES"
-            fi
-            echo "EOF"
-          } >> $GITHUB_OUTPUT
-
-      - name: Update productName for filename
-        shell: bash
-        run: |
-          # 临时修改 tauri.conf.json 的 productName，使文件名包含 mode
-          node -e "
-          const fs = require('fs');
-          const path = require('path');
-          // Tauri 2 多 app：main 的配置在 src-tauri/app-main/tauri.conf.json
-          const configPath = 'src-tauri/app-main/tauri.conf.json';
-          const config = JSON.parse(fs.readFileSync(configPath, 'utf8'));
-          const originalName = config.productName;
-          config.productName = originalName + '-${{ matrix.mode }}';
-          fs.writeFileSync(configPath, JSON.stringify(config, null, 2));
-          console.log('Updated productName to:', config.productName);
-          "
-
-      - name: Build Tauri app
-        run: bun run build -- --mode ${{ matrix.mode }}
-
-      - name: Restore productName
-        if: always()
-        shell: bash
-        run: |
-          # 恢复原始 productName
-          node -e "
-          const fs = require('fs');
-          const path = require('path');
-          const configPath = 'src-tauri/app-main/tauri.conf.json';
-          const config = JSON.parse(fs.readFileSync(configPath, 'utf8'));
-          config.productName = config.productName.replace(/-normal$|-local$/, '');
-          fs.writeFileSync(configPath, JSON.stringify(config, null, 2));
-          console.log('Restored productName to:', config.productName);
-          "
-
-      - name: Upload artifacts
-        if: success()
-        uses: actions/upload-artifact@v4
-        with:
-          name: installer-${{ matrix.mode }}
-          path: src-tauri/target/release/bundle/nsis/*.exe
-          retention-days: 7
-
-  create-release:
-    name: Create Release
-    needs: build-and-release
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    if: startsWith(github.ref, 'refs/tags/v') || github.event_name == 'workflow_dispatch'
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Get version from package.json
-        id: version
-        run: |
-          VERSION=$(node -p "require('./package.json').version")
-          TAG="v${VERSION}"
-          echo "version=${VERSION}" >> $GITHUB_OUTPUT
-          echo "tag=${TAG}" >> $GITHUB_OUTPUT
 
       - name: Generate changelog
         id: changelog
@@ -253,36 +42,26 @@ jobs:
           PREV_TAG=$(git describe --tags --abbrev=0 HEAD~1 2>/dev/null || echo "")
 
           if [ -z "$PREV_TAG" ]; then
-            CHANGES=$(git log --pretty=format:"- %s (%h)" --no-merges)
+            CHANGES=$(git log --pretty=format:"- %s (%h)" --no-merges 2>/dev/null || echo "- 无变更记录")
           else
-            CHANGES=$(git log ${PREV_TAG}..HEAD --pretty=format:"- %s (%h)" --no-merges)
+            CHANGES=$(git log ${PREV_TAG}..HEAD --pretty=format:"- %s (%h)" --no-merges 2>/dev/null || echo "- 无变更记录")
           fi
 
           {
             echo "changelog<<EOF"
             echo "## 📝 更新内容"
             echo ""
-            if [ -z "$CHANGES" ]; then
-              echo "- 无变更记录"
-            else
-              echo "$CHANGES"
-            fi
+            echo "$CHANGES"
             echo "EOF"
           } >> $GITHUB_OUTPUT
 
-      - name: Download all artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: artifacts
-
       - name: Create Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ steps.version.outputs.tag }}
           name: "Kabegame ${{ steps.version.outputs.tag }}"
           body: ${{ steps.changelog.outputs.changelog }}
           draft: false
-          prerelease: ${{ github.event.inputs.prerelease || contains(steps.version.outputs.version, '-') || contains(steps.version.outputs.version, 'alpha') || contains(steps.version.outputs.version, 'beta') || contains(steps.version.outputs.version, 'rc') }}
+          prerelease: ${{ github.event.inputs.prerelease || false }}
           files: |
-            artifacts/installer-normal/*.exe
-            artifacts/installer-local/*.exe
+            release/*
