--- a/src-tauri/app-main/Cargo.toml
+++ b/src-tauri/app-main/Cargo.toml
@@ -31,7 +31,14 @@ windows = {version = "0.52", features = [
   "Win32_System_Com",
   "Win32_UI_Shell",
 ]}
-windows-sys = {workspace = true, features = ["Win32_Security", "Win32_Security_Authorization"]}
+windows-sys = {workspace = true, features = [
+  "Win32_Foundation",
+  "Win32_Graphics_Gdi",
+  "Win32_Security",
+  "Win32_Security_Authorization",
+  "Win32_System_DataExchange",
+  "Win32_System_Memory",
+]}
 winreg = "0.52"
 winver = "1"
 
