--- a/todo.ini
+++ b/todo.ini
@@ -19,7 +19,10 @@
 # 画册页面重命名重复名称报错为 undefined
 # 前端任务图片列表错误
 # 应用启动带检测daemon是否运行，如果未运行则启动daemon
-查看官方github源的内容的加载慢（可以放到本地）
+# 查看官方github源的内容的加载慢（可以放到本地）
+等待中数量有时不同步
+检查壁纸轮播器是否正常工作（当应用启动的时候轮播设置为开启状态时）
+
 [issue]
 # 设置页面的UI不好看，应该靠中间，而非靠两边挤
 # 去重不应该阻塞到下载结束
@@ -60,11 +63,11 @@ rotator添加栈，使得可以回退到上一个壁纸
 # !!（放弃） 支持 iOS（提供有限的壁纸功能）
 # !!!（ROI低） 支持微信小程序（放弃壁纸功能，仅提供图片浏览服务）
 # !!!!!（看 feature request）支持HarmonyOS（如果实现了，便是全社区第一）
-!! 集成图形训练pytorch，用来智能分类壁纸
+!! 集成图形训练，用来智能分类壁纸
 ! 局域网数据共享（复用爬虫插件，通过http访问peer，并提供可扩展的发现协议）
 ! Provider 插件系统（允许插件作者使用 rhai 编写自定义 Provider，支持自定义数据视图）（内置的provider滞留root_provider（加载所有plugin_provider）以及all_provider（运行上层provider提供的sql来提供分页视图））（provider可以不用all_provider直接返回图片）
 ! Provider 支持远程 URL（Provider 可以返回远程图片 URL，支持预览模式和按需下载）
-支持light mode，干净纯洁轻量版本，天然self-hosted，并且不支持虚拟盘和商店插件
+# 支持light mode，干净纯洁轻量版本，天然self-hosted，并且不支持虚拟盘和商店插件
 
 [refactor]
 # (daemon去掉) 把托盘移到daemon里，用户可以通过托盘退出daemon
@@ -77,8 +80,9 @@ rotator添加栈，使得可以回退到上一个壁纸
 将前端的 blob 统一放在一个store中处理，前端监听有效性，一旦无效则重新申请url。（可选：用户可以配置缓存大小）（永远不能revoke用户正在看的预览图的blob）
 provider不分远程图片和本地图片，只有前端的url加载器、后端磁盘的read_file根据schema采取不同处理。
 前端的一切和数据存储有关的数据变化都由数据驱动处理，并在刷新或者发生不一致的时候才重新请求数据。
-将请求处理里的返回响应从写表函数移动到handler里
-设置按细粒度获取和写入，不应该复制后写入
+# 将请求处理里的返回响应从写表函数移动到handler里
+# 设置按细粒度获取和写入，不应该复制后写入
+用内藏浏览器来爬取复制网页
 
 [stash]
 画册增加、减少相关事件
