--- a/todo.ini
+++ b/todo.ini
@@ -22,6 +22,9 @@
 # 查看官方github源的内容的加载慢（可以放到本地）
 等待中数量有时不同步
 检查壁纸轮播器是否正常工作（当应用启动的时候轮播设置为开启状态时）
+画廊总数偶尔有丢事件的现象
+预览图片按del键删除的不是预览的图片，而是单选的图片
+轮播没有保存当前轮播图片id
 
 [issue]
 # 设置页面的UI不好看，应该靠中间，而非靠两边挤
