--- a/todo.ini
+++ b/todo.ini
@@ -21,7 +21,7 @@
 # 应用启动带检测daemon是否运行，如果未运行则启动daemon
 # 查看官方github源的内容的加载慢（可以放到本地）
 等待中数量有时不同步
-检查壁纸轮播器是否正常工作（当应用启动的时候轮播设置为开启状态时）
+# 检查壁纸轮播器是否正常工作（当应用启动的时候轮播设置为开启状态时）
 画廊总数偶尔有丢事件的现象
 预览图片按del键删除的不是预览的图片，而是单选的图片
 轮播没有保存当前轮播图片id
@@ -89,3 +89,4 @@ provider不分远程图片和本地图片，只有前端的url加载器、后端
 
 [stash]
 画册增加、减少相关事件
+画册被删、改名时，轮播画册应该同步修改
