--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     "vue.volar",
     "tauri-apps.tauri-vscode",
     "rust-lang.rust-analyzer",
-    "rhaiscript.vscode-rhai"
+    "rhaiscript.vscode-rhai",
+    "antfu.unocss"
   ]
 }
