--- a/src-tauri/app-main/deb/kabegame.desktop
+++ b/src-tauri/app-main/deb/kabegame.desktop
@@ -1,12 +1,13 @@
+# 用来声明打开app的方法
 [Desktop Entry]
 Version=1.0
 Type=Application
-Name=Kabegame
+Name={{name}}
 Name[en]=Kabegame
 Comment=二次元壁纸管理器
 Comment[en]=Anime Wallpaper Manager
-Exec=kabegame
-Icon=kabegame
+Exec={{exec}}
+Icon={{icon}}
 Terminal=false
 Categories=Graphics;Viewer;Utility;
 StartupNotify=true
