--- a/todo.ini
+++ b/todo.ini
@@ -20,11 +20,13 @@
 # 前端任务图片列表错误
 # 应用启动带检测daemon是否运行，如果未运行则启动daemon
 # 查看官方github源的内容的加载慢（可以放到本地）
-等待中数量有时不同步
+“等待中”数量有时不同步
 # 检查壁纸轮播器是否正常工作（当应用启动的时候轮播设置为开启状态时）
 画廊总数偶尔有丢事件的现象
-预览图片按del键删除的不是预览的图片，而是单选的图片
+预览图片按del键删除的不是预览的图片，而是单选的图片（在任务中）
 轮播没有保存当前轮播图片id
+宽高比在打开抽屉前不初始化
+将dumpjson去掉
 
 [issue]
 # 设置页面的UI不好看，应该靠中间，而非靠两边挤
@@ -71,6 +73,7 @@ rotator添加栈，使得可以回退到上一个壁纸
 ! Provider 插件系统（允许插件作者使用 rhai 编写自定义 Provider，支持自定义数据视图）（内置的provider滞留root_provider（加载所有plugin_provider）以及all_provider（运行上层provider提供的sql来提供分页视图））（provider可以不用all_provider直接返回图片）
 ! Provider 支持远程 URL（Provider 可以返回远程图片 URL，支持预览模式和按需下载）
 # 支持light mode，干净纯洁轻量版本，天然self-hosted，并且不支持虚拟盘和商店插件
+桌面右键菜单下一张图片（windows用nsis脚本，plasma用desktop文件），并且做好错误处理
 
 [refactor]
 # (daemon去掉) 把托盘移到daemon里，用户可以通过托盘退出daemon
@@ -85,8 +88,8 @@ provider不分远程图片和本地图片，只有前端的url加载器、后端
 前端的一切和数据存储有关的数据变化都由数据驱动处理，并在刷新或者发生不一致的时候才重新请求数据。
 # 将请求处理里的返回响应从写表函数移动到handler里
 # 设置按细粒度获取和写入，不应该复制后写入
-用内藏浏览器来爬取复制网页
+! 用内藏浏览器来爬取复制网页（技术方案、风险、重构范围）
 
 [stash]
 画册增加、减少相关事件
-画册被删、改名时，轮播画册应该同步修改
+# 画册被删、改名时，轮播画册应该同步修改
