--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "archiver": "^7.0.1",
     "chalk": "^5.3.0",
     "commander": "^12.1.0",
+    "handlebars": "^4.7.8",
     "husky": "^9.1.7",
     "nx": "^20.0.0",
     "sass": "^1.97.1",
