--- a/src-tauri/app-cli/Cargo.toml
+++ b/src-tauri/app-cli/Cargo.toml
@@ -2,6 +2,7 @@
 edition = {workspace = true}
 name = "kabegame-cli"
 version = {workspace = true}
+default-run = "kabegame-cli"
 
 [dependencies]
 base64 = {workspace = true}
