--- a/src-tauri/core/Cargo.toml
+++ b/src-tauri/core/Cargo.toml
@@ -33,6 +33,8 @@ zip = {workspace = true}
 
 [target.'cfg(target_os = "linux")'.dependencies]
 which = {version = "6.0", optional = true}
+fuser = "0.16"
+libc = "0.2"
 
 [target.'cfg(windows)'.dependencies]
 dokan = "0.3.1"
