--- a/todo.ini
+++ b/todo.ini
@@ -62,8 +62,8 @@ rotator添加栈，使得可以回退到上一个壁纸
 支持多设备共享数据（无服务器，通过手动操作主动进行）
 # 插件编辑器，用vscode编辑器引擎
 每日爬图统计功能（具体如何做？来个产品设计一下）
-# ! （降权）支持 Macos
-支持 Linux（支持不同桌面，现已支持plasma）
+支持 Macos
+# 支持 Linux（支持不同桌面，现已支持plasma）
 !! 支持 Android
 # !!（放弃） 支持 iOS（提供有限的壁纸功能）
 # !!!（ROI低） 支持微信小程序（放弃壁纸功能，仅提供图片浏览服务）
