--- a/src-tauri/app-main/Cargo.toml
+++ b/src-tauri/app-main/Cargo.toml
@@ -17,11 +17,6 @@ memmap2 = {version = "0.9", optional = true}
 serde = {workspace = true}
 serde_json = {workspace = true}
 sha2 = {workspace = true}
-tauri = {workspace = true, features = [
-  "image-png",  # 剪贴板 writeImage 需解码 PNG/JPEG，否则 macOS 报 "expected RGBA image data, found raw bytes"
-#  编译macos的时候必须开启！！
-  "macos-private-api",
-]}
 tauri-plugin-clipboard-manager = "2"
 tauri-plugin-dialog = "=2.4.2"
 tauri-plugin-fs = "=2.4.4"
@@ -31,12 +26,13 @@ tokio = {workspace = true}
 uuid = {workspace = true}
 
 # 桌面端启用 IPC 功能，移动端禁用
-[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
-kabegame-core = {workspace = true, default-features = false, features = ["ipc-server", "ipc-client"]}
+[target.'cfg(not(target_os = "android"))'.dependencies]
+kabegame-core = {workspace = true, default-features = false, features = ["ipc-server", "ipc-client"] }
 governor = "0.7"
 
-[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
+[target.'cfg(target_os = "android")'.dependencies]
 kabegame-core = {workspace = true, default-features = false}
+tauri-plugin-picker = { workspace = true }
 
 [target.'cfg(target_os = "windows")'.dependencies]
 dokan = {version = "0.3.1", optional = true}
@@ -46,7 +42,7 @@ windows = {version = "0.52", features = [
   "Win32_Foundation",
   "Win32_System_Com",
   "Win32_UI_Shell",
-]}
+] }
 windows-sys = {workspace = true, features = [
   "Win32_Foundation",
   "Win32_Graphics_Gdi",
@@ -54,7 +50,7 @@ windows-sys = {workspace = true, features = [
   "Win32_Security_Authorization",
   "Win32_System_DataExchange",
   "Win32_System_Memory",
-]}
+] }
 winreg = "0.52"
 winver = "1"
 
@@ -62,7 +58,7 @@ winver = "1"
 arboard = "3.6"
 
 [target.'cfg(target_os = "macos")'.dependencies]
-tauri = {workspace = true, features = ["macos-private-api"]}
+tauri = { version = "2.10", features = ["macos-private-api", "tray-icon", "devtools", "protocol-asset", "image-png"] }
 objc2-app-kit = { version = "0.3", default-features = false, features = [
   "std",
   "NSPasteboard",
@@ -71,6 +67,9 @@ objc2-foundation = { version = "0.3", default-features = false, features = [
   "std",
   "NSData",
 ] }
+
+[target.'cfg(not(target_os = "macos"))'.dependencies]
+tauri = { version = "2.10", features = ["macos-private-api", "tray-icon", "devtools", "protocol-asset", "image-png"] }
 
 [build-dependencies]
 tauri-build = {workspace = true}
